--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,9 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: right;
+    text-align: center;
+    align-items: center;
+
 
     & h1 {
         font-size: 2rem;
@@ -25,6 +28,7 @@
 
     & p {
         text-align: center;
+            align-items: center;
     }
 }
 
@@ -38,6 +42,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1rem;
+    letter-spacing: 0.9px;
 
     & .coffee {
         position: relative;
